--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html>
     
 <!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
