--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                     <p>Altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est nimis exigue et exiliter ad calculos vocare amicitiam, ut par sit ratio acceptorum et datorum. Divitior mihi et affluentior videtur esse vera amicitia nec observare restricte, ne plus reddat quam acceperit; neque enim verendum est, ne quid excidat, aut ne quid in terram defluat, aut ne plus aequo quid in amicitiam congeratur.</br>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.</br>Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales. nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">     
-                    <a href="" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg"></a>
+                    <a href="" data-toggle="modal" data-target="#myModal1"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg"></a>
                     <!-- Modal -->
-                    <div id="myModal" class="modal fade" role="dialog">
+                    <div id="myModal1" class="modal fade" role="dialog">
                       <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
@@ -135,9 +135,9 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">
-                    <a href="" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/46/cd/76/46cd765de2f332a0de9561560e49cffd.jpg"></a>
+                    <a href="" data-toggle="modal" data-target="#myModal2"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/46/cd/76/46cd765de2f332a0de9561560e49cffd.jpg"></a>
                     <!-- Modal -->
-                    <div id="myModal" class="modal fade" role="dialog">
+                    <div id="myModal2" class="modal fade" role="dialog">
                       <div class="modal-dialog">
 
                         <!-- Modal content-->
@@ -160,9 +160,9 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">
-                    <a href="" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/69/df/33/69df334b464d44816a2de0024e6b5b8a.jpg"></a>
+                    <a href="" data-toggle="modal" data-target="#myModal3"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/69/df/33/69df334b464d44816a2de0024e6b5b8a.jpg"></a>
                     <!-- Modal -->
-                    <div id="myModal" class="modal fade" role="dialog">
+                    <div id="myModal3" class="modal fade" role="dialog">
                       <div class="modal-dialog">
 
                         <!-- Modal content-->
