modif modal chausse-pieds

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <!-- Modal content-->
                         <div class="modal-content">
                           <div class="modal-header">
-                            <a class="close"></a>
                             <h4 class="modal-title">Modal Header</h4>
+                            <p>Some text in the modal.</p>
                           </div>
                           <div class="modal-body">
                             <div class="container">
@@ -107,8 +107,7 @@
                                         <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/c3/a5/80/c3a580423bf5773e32c0152125913722.jpg">
                                     </div>        
                                 </div>
-                            </div>
-                            <p>Some text in the modal.</p>
+                            </div> 
                           </div>
                           <div class="modal-footer">
                             <button type="button" data-dismiss="modal">Close</button>
@@ -125,13 +124,30 @@
                         <!-- Modal content-->
                         <div class="modal-content">
                           <div class="modal-header">
-                            <a class="close"></a>
                             <h4 class="modal-title">Modal Header</h4>
-                          </div>
-                          <div class="modal-body">
-                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/46/cd/76/46cd765de2f332a0de9561560e49cffd.jpg">
                             <p>Some text in the modal.</p>
                           </div>
+                          <div class="modal-body">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/32/9d/37329d91ad87c87cfba437ecbd285716.jpg">
+                                        </div>
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="http://nsa38.casimages.com/img/2016/09/10/160910021541511377.jpg">
+                                        </div>      
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/03/56/09/0356092e05aac1389affae01159c76ea.jpg">
+                                        </div>
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/c3/a5/80/c3a580423bf5773e32c0152125913722.jpg">
+                                        </div>        
+                                    </div>
+                                </div>
+                          </div>
+                          
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                           </div>
@@ -146,18 +162,34 @@
                       <div class="modal-dialog">
                         <!-- Modal content-->
                         <div class="modal-content">
-                          <div class="modal-header">
-                            <a class="close"></a>
+                          <div class="modal-header">    
                             <h4 class="modal-title">Modal Header</h4>
-                          </div>
-                          <div class="modal-body">
                             <p>Some text in the modal.</p>
                           </div>
+                          <div class="modal-body">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/32/9d/37329d91ad87c87cfba437ecbd285716.jpg">
+                                        </div>
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="http://nsa38.casimages.com/img/2016/09/10/160910021541511377.jpg">
+                                        </div>      
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/03/56/09/0356092e05aac1389affae01159c76ea.jpg">
+                                        </div>
+                                        <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
+                                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/c3/a5/80/c3a580423bf5773e32c0152125913722.jpg">
+                                        </div>        
+                                    </div>
+                                </div>
+                          </div>       
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                           </div>
                         </div>
-
                       </div>
                     </div>      
                 </div>
@@ -184,6 +216,25 @@
             </div>
         </div> 
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
