création slide et mise en forme

--- a/index.html
+++ b/index.html
@@ -285,31 +285,66 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
+            <li data-target="#myCarousel" data-slide-to="6"></li>
+
         </ol>
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/atelier-boisde5.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2 class="titre-slide">Le sur-mesure</h2>
+                    	<p class="texte-slide">Découvrez notre nouveau service d'excellence, pour une création qui vous ressemble.</p>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/rouleau_cuir059.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2 class="titre-slide">Choisissez vos matières</h2>
+                    	<p class="texte-slide">Faites votre choix parmi les plus belles matières nobles</p>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');">
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture-snake.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2 class="titre-slide">Caption 3</h2>
+                     	<p class="texte-slide">blablabla</p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-assemblage.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide">Découvrez</h2>
+                    	<p class="texte-slide">bipbipbipbipbip</p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide">Découvrez</h2>
+                    	<p class="texte-slide">lalalalalalalalalalalala</p>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-texture-2.jpg');">
+                </div>
+                <div class="carousel-caption">
+                    <h2 class="titre-slide">Découvrez</h2>
+                    	<p class="texte-slide">llulululululululul</p>
                 </div>
             </div>
         </div>
