mise en place des ancres

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Chausse-pieds</a>
+                        <a href="#chaussepied">Chausse-pieds</a>
                     </li>
                     <li>
-                        <a href="#">Tire-bottes</a>
+                        <a href="#tirebotte">Tire-bottes</a>
                     </li>
                     <li>
-                        <a href="#">Sur-mesure</a>
+                        <a href="#contact">Sur-mesure</a>
                     </li>
                     <li>
-                        <a class="contact" href="#">Contact</a>
+                        <a class="contact" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
                     <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/28/c7/3c/28c73c514c1912b30e7656fdcf9480aa.jpg">
                 </div>    
                 <div class="col-lg-9 col-md-6 col-ms-8 col-xs-12"> 
-                    <h1>Nos chausse-pieds</h1>
+                    <h1 id="chaussepied">Nos chausse-pieds</h1>
                     <p>Altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est nimis exigue et exiliter ad calculos vocare amicitiam, ut par sit ratio acceptorum et datorum. Divitior mihi et affluentior videtur esse vera amicitia nec observare restricte, ne plus reddat quam acceperit; neque enim verendum est, ne quid excidat, aut ne quid in terram defluat, aut ne plus aequo quid in amicitiam congeratur.</br>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.</br>Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales. nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">     
@@ -198,7 +198,7 @@
         <div class="row-fluid">
             <div class="Tire-bottes">
                 <div class="col-lg-9 col-md-6 col-ms-8 col-xs-12"> 
-                    <h1>Nos tire-bottes</h1>
+                    <h1 id="tirebotte">Nos tire-bottes</h1>
                     <p>Altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est nimis exigue et exiliter ad calculos vocare amicitiam, ut par sit ratio acceptorum et datorum. Divitior mihi et affluentior videtur esse vera amicitia nec observare restricte, ne plus reddat quam acceperit; neque enim verendum est, ne quid excidat, aut ne quid in terram defluat, aut ne plus aequo quid in amicitiam congeratur.</br>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.</br>Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales. nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12"> 
@@ -299,7 +299,7 @@
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Le sur-mesure</h2>
-                    	<p class="texte-slide">Découvrez notre nouveau service d'excellence, pour une création qui vous ressemble.</p>
+                    	<p class="texte-slide">Découvrez notre nouveau service d'excellence, façonnée et assemblée dans notre atelier une création qui vous ressemble.</p>
                 </div>
             </div>
             <div class="item">
@@ -308,7 +308,7 @@
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Choisissez vos matières</h2>
-                    	<p class="texte-slide">Faites votre choix parmi les plus belles matières nobles</p>
+                    	<p class="texte-slide">Découvrez et choisissez parmi les plus belles matières nobles</p>
                 </div>
             </div>
             <div class="item">
@@ -316,8 +316,8 @@
                 <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture-snake.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2 class="titre-slide">Caption 3</h2>
-                     	<p class="texte-slide">blablabla</p>
+                    <h2 class="titre-slide"></h2>
+                     	<p class="texte-slide"></p>
                 </div>
             </div>
             <div class="item">
@@ -325,8 +325,8 @@
                 <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-assemblage.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2 class="titre-slide">Découvrez</h2>
-                    	<p class="texte-slide">bipbipbipbipbip</p>
+                    <h2 class="titre-slide">Laissez votre empreinte</h2>
+                    	<p class="texte-slide">Un cadeau spécial ? Une attention particulière ? N'hésitez plus et demander la gravure de vos initiales</p>
                 </div>
             </div>
             <div class="item">
@@ -358,45 +358,15 @@
     </div>
 <!--https://s-media-cache-ak0.pinimg.com/564x/10/e0/cd/10e0cd826346e55dba10547834a0f4e0.jpg-->
 <footer>
-    <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">     
-                    <a href="" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg"></a>
-                    <!-- Modal -->
-                    <div id="myModal" class="modal fade" role="dialog">
-                      <div class="modal-dialog">
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <a class="close"></a>
-                            <h4 class="modal-title">Modal Header</h4>
-                          </div>
-                          <div class="modal-body">
-                            <div class="container">
-                                ...
-                            </div>
-                        <!--    <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg">
-                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg">
-                            <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/37/d9/5f/37d95f3f3498e1b3cc8555275b040a69.jpg">-->
-                            <p>Some text in the modal.</p>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" data-dismiss="modal">Close</button>
-                          </div>
-                        </div>
 
-                      </div>
-                    </div>
-                </div>
+	<h2 id="contact">Contact</h2>
+
 </footer>
     <!-- Put your page content here! -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-
-
-
-
 
 
 </body>
