--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/demo.css">
 	<link rel="stylesheet" href="css/footer-basic-centered.css">
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+	 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
 
 
 <script src="https://use.fontawesome.com/4b73a13289.js"></script>
@@ -53,7 +54,7 @@
                         <a href="#tirebotte">Tire-bottes</a>
                     </li>
                     <li>
-                        <a href="#contact">Sur-mesure</a>
+                        <a href="#surmesure">Sur-mesure</a>
                     </li>
                     <li>
                         <a class="contact" href="#contact">Contact</a>
@@ -365,26 +366,25 @@
             <span class="icon-next"></span>
         </a>
     </div>
-<!--https://s-media-cache-ak0.pinimg.com/564x/10/e0/cd/10e0cd826346e55dba10547834a0f4e0.jpg-->
+
 <footer class="footer-distributed">
 
 			<div class="footer-left">
 
-				<h3>Wildshoes<span></span></h3>
-				<img 
+				<!--<h3>Wildshoes<span></span></h3>-->
+				<img src="http://img1.imagilive.com/0916/logo829.png" alt="image du logo" />
 
 				<p class="footer-links">
 					<a href="#">Accueil</a>
 					·
-					<a href="#">Chausse-Pieds</a>
+					<a href="#chaussepied">Chausse-Pieds</a>
 					·
-					<a href="#">Tire-bottes</a>
+					<a href="#tirebotte">Tire-bottes</a>
 					·
-					<a href="#">Sur-Mesure</a>
+					<a href="#surmesure">Sur-Mesure</a>
 					·
 					<!--<a href="#">""</a>-->
-					·
-					<a href="#">Contact</a>
+					<a href="#contact">Contact</a>
 				</p>
 
 				<p class="footer-company-name">Wildshoes &copy; 2015</p>
@@ -392,8 +392,22 @@
 
 			<div class="footer-center">
 
-				<div>
-					<i class="fa fa-map-marker"></i>
+				<div class="map-icons">
+					<!-- Trigger/Open The Modal -->
+					<i class="fa fa-map-marker" button id="myBtn"></i></button>
+
+					<!-- The Modal -->
+					<div id="myModal" class="modal">
+
+  					<!-- Modal content -->
+  					<div class="modal-content">
+  					<div>
+					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8904960155487058%2C47.891542819697705%2C1.8980169296264646%2C47.895743987454274&amp;layer=mapnik&amp;marker=47.8936434461818%2C1.8942564725875854" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=47.89364&amp;mlon=1.89426#map=17/47.89364/1.89426&amp;layers=N">View Larger Map</a></small>
+					</div>
+					<span class="close">x</span>
+				 	</div>
+
+				</div>
 					<p><span>1 Avenue du Champ de Mars</span> 45000 Orléans</p>
 				</div>
 
@@ -427,19 +441,12 @@
 
 			</div>
 
-			 <div id="mapid">
-			 	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-			 </div>
-
 		</footer>
     <!-- Put your page content here! -->
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <!--leaflet javascript-->
-     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-
 
 </body>
 
