--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
     <link rel="stylesheet" href="css/demo.css">
 	<link rel="stylesheet" href="css/footer-basic-centered.css">
-	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-	 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
 
 
 <script src="https://use.fontawesome.com/4b73a13289.js"></script>
@@ -401,9 +402,8 @@
 
   					<!-- Modal content -->
   					<div class="modal-content">
-  					<div>
-					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8904960155487058%2C47.891542819697705%2C1.8980169296264646%2C47.895743987454274&amp;layer=mapnik&amp;marker=47.8936434461818%2C1.8942564725875854" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=47.89364&amp;mlon=1.89426#map=17/47.89364/1.89426&amp;layers=N">View Larger Map</a></small>
-					</div>
+  					<img src="http://img1.imagilive.com/0916/crop.png" alt="carte adresse wildshoes">
+  					<div class="map-link"><a href="http://www.openstreetmap.org/?mlat=47.89364&amp;mlon=1.89426#map=17/47.89364/1.89426&amp;layers=N">View Larger Map</a></div>
 					<span class="close">x</span>
 				 	</div>
 
