--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
+	 <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab" rel="stylesheet"> 
 
 
 <script src="https://use.fontawesome.com/4b73a13289.js"></script>
@@ -79,6 +80,8 @@
             </div>
         </div>
     </header>
+
+    <h3 id="chaussepied"></h3>
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="Chausse-pieds">
@@ -86,7 +89,7 @@
                     <img class="img-responsive" src="https://s-media-cache-ak0.pinimg.com/564x/28/c7/3c/28c73c514c1912b30e7656fdcf9480aa.jpg">
                 </div>    
                 <div class="col-lg-9 col-md-6 col-ms-8 col-xs-12"> 
-                    <h1 id="chaussepied">Nos chausse-pieds</h1>
+                    <h1>Nos chausse-pieds</h1>
                     <p>Altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est nimis exigue et exiliter ad calculos vocare amicitiam, ut par sit ratio acceptorum et datorum. Divitior mihi et affluentior videtur esse vera amicitia nec observare restricte, ne plus reddat quam acceperit; neque enim verendum est, ne quid excidat, aut ne quid in terram defluat, aut ne plus aequo quid in amicitiam congeratur.</br>Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.</br>Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem deiectos atque maestitiam, quorum adventu intendebantur eculei uncosque parabat carnifex et tormenta. et ex is proscripti sunt plures actique in exilium alii, non nullos gladii consumpsere poenales. nec enim quisquam facile meminit sub Constantio, ubi susurro tenus haec movebantur, quemquam absolutum.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-ms8 col-xs-12">     
@@ -227,25 +230,7 @@
             </div>
         </div> 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+   
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-8 col-xs-12">
@@ -290,6 +275,7 @@
  <!-- Half Page Image Background Carousel Header -->
 
 
+ 	<h3 id="surmesure"></h3>
     <div id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -310,7 +296,7 @@
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Le sur-mesure</h2>
-                    	<p class="texte-slide">Découvrez notre nouveau service d'excellence, façonnée et assemblée dans notre atelier une création qui vous ressemble.</p>
+                    	<p class="texte-slide">Venez découvrir notre nouveau service de personnalisation, pour une création qui vous ressemble.</p>
                 </div>
             </div>
             <div class="item">
@@ -319,7 +305,7 @@
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Choisissez vos matières</h2>
-                    	<p class="texte-slide">Découvrez et choisissez parmi les plus belles matières nobles</p>
+                    	<p class="texte-slide">Laissez vous séduire par nos plus belles matières nobles.</p>
                 </div>
             </div>
             <div class="item">
@@ -332,30 +318,30 @@
                 </div>
             </div>
             <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
+                <!-- Set the fourth background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-assemblage.jpg');">
                 </div>
                 <div class="carousel-caption">
                     <h2 class="titre-slide">Laissez votre empreinte</h2>
-                    	<p class="texte-slide">Un cadeau spécial ? Une attention particulière ? N'hésitez plus et demander la gravure de vos initiales</p>
+                    	<p class="texte-slide">Un cadeau spécial ? Une attention particulière ? N'hésitez plus et demander la gravure de vos initiales.</p>
                 </div>
             </div>
             <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
+                <!-- Set the fifth background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/leather-texture.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2 class="titre-slide">Découvrez</h2>
-                    	<p class="texte-slide">lalalalalalalalalalalala</p>
+                    <h2 class="titre-slide">Informations</h2>
+                    	<p class="texte-slide">Notre service est disponible sur demande, n'hésitez pas à nous contacter.</p>
                 </div>
             </div>
             <div class="item">
-                <!-- Set the third background image using inline CSS below. -->
+                <!-- Set the sixth background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('http://img1.imagilive.com/0916/wood-texture-2.jpg');">
                 </div>
                 <div class="carousel-caption">
-                    <h2 class="titre-slide">Découvrez</h2>
-                    	<p class="texte-slide">llulululululululul</p>
+                    <h2 class="titre-slide"></h2>
+                    	<p class="texte-slide">À bientôt dans notre boutique.</p>
                 </div>
             </div>
         </div>
@@ -367,6 +353,8 @@
             <span class="icon-next"></span>
         </a>
     </div>
+
+    <h3 id="contact"></h3>
 
 <footer class="footer-distributed">
 
